--- a/miryoku/miryoku_behaviors.dtsi
+++ b/miryoku/miryoku_behaviors.dtsi
@@ -17,5 +17,30 @@
       flavor = "tap-preferred";
       bindings = <&mo>, <&kp>;
     };
+
+    // urob's timeless home row mods
+    // https://github.com/urob/zmk-config?tab=readme-ov-file#timeless-homerow-mods
+    u_lmt: u_lmt {
+      compatible = "zmk,behavior-hold-tap";
+      #binding-cells = <2>;
+      tapping-term-ms = <U_TAPPING_TERM>;
+      quick-tap-ms = <175>;
+      require-prior-idle-ms = <150>;
+      flavor = "balanced";
+      hold-trigger-key-positions = <5 6 7 8 9 15 16 17 18 19 25 26 27 28 29 33 34 35 36>;
+      hold-trigger-on-release;
+      bindings = <&kp>, <&kp>;
+    };
+    u_rmt: u_rmt {
+      compatible = "zmk,behavior-hold-tap";
+      #binding-cells = <2>;
+      tapping-term-ms = <U_TAPPING_TERM>;
+      quick-tap-ms = <175>;
+      require-prior-idle-ms = <150>;
+      flavor = "balanced";
+      hold-trigger-key-positions = <0 1 2 3 4 10 11 12 13 14 20 21 22 23 24 33 34 35 36>;
+      hold-trigger-on-release;
+      bindings = <&kp>, <&kp>;
+    };
   };
 };
