--- a/miryoku/miryoku_behaviors.dtsi
+++ b/miryoku/miryoku_behaviors.dtsi
@@ -23,7 +23,7 @@
     u_lmt: u_lmt {
       compatible = "zmk,behavior-hold-tap";
       #binding-cells = <2>;
-      tapping-term-ms = <U_TAPPING_TERM>;
+      tapping-term-ms = <280>;
       quick-tap-ms = <175>;
       require-prior-idle-ms = <150>;
       flavor = "balanced";
@@ -34,7 +34,7 @@
     u_rmt: u_rmt {
       compatible = "zmk,behavior-hold-tap";
       #binding-cells = <2>;
-      tapping-term-ms = <U_TAPPING_TERM>;
+      tapping-term-ms = <280>;
       quick-tap-ms = <175>;
       require-prior-idle-ms = <150>;
       flavor = "balanced";
